dodana grana polaznika

--- a/damir_prelic.html
+++ b/damir_prelic.html
@@ -7,10 +7,7 @@
     <title>Fork - vjezba</title>
   </head>
   <body>
-    <h1>Predavac: Matej</h1>
-    <h2>Polaznici</h2>
-    <ul>
-      <li><a href="damir_prelic.html">Damir Prelić</a></li>
-    </ul>
+    <h1>Polaznik</h1>
+    <h2>Damir Prelić</h2>
   </body>
 </html>
