--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Fork - vjezba</title>
   </head>
   <body>
-    <h1>Polaznik Mario</h1>
+    <h1>Polaznik Mario Smajla</h1>
   </body>
 </html>
