--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Fork - vjezba</title>
 </head>
 <body>
-  <h1>Predavac: Matej</h1>
+  <h1>Polaznik: Mislav Hilc</h1>
+  <p>Node: Pikachu</p>
 </body>
 </html>
