--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fork - vjezba</title>
+    <title>Davor Pasariček</title>
+    <style>
+      body {
+        background-color: rgb(9, 9, 46);
+      }
+    </style>
   </head>
   <body>
     <h1>Polaznik: Davor</h1>
